feat: add unit component
