# routes/api.php
@@ -24,3 +24,5 @@ Route::resource('focal_people', 'FocalPersonAPIController');
 Route::resource('agency_types', 'AgencyTypeAPIController');
 
 Route::resource('agencies', 'AgencyAPIController');
+
+Route::resource('units', 'UnitAPIController');
