# routes/web.php
@@ -27,3 +27,5 @@ Route::resource('focalPeople', 'FocalPersonController');
 Route::resource('agencyTypes', 'AgencyTypeController');
 
 Route::resource('agencies', 'AgencyController');
+
+Route::resource('units', 'UnitController');
